--- a/LT.NET_project_cuoiki/Views/Shop/Product.cshtml
+++ b/LT.NET_project_cuoiki/Views/Shop/Product.cshtml
@@ -299,7 +299,7 @@
                                             <div class="card-btn">
                                                 <button><a href="@Url.Action("Details", new { id = item.Id })">Chi tiết</a></button>
 
-                                                <button type="submit"><a href="/Shop/AddToCart?productId=@item.Id" class="addtocart">Thêm vào giỏ</a></button>
+                                                <button><a href="/Shop/AddToCart?productId=@item.Id" class="addtocart">Thêm vào giỏ</a></button>
                                             </div>
                                         </div>
                                     </div>
