--- a/LT.NET_project_cuoiki/Views/Shop/Cart.cshtml
+++ b/LT.NET_project_cuoiki/Views/Shop/Cart.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dictionary<string, LT.NET_project_cuoiki.Models.ProductInCart>
+﻿@model Dictionary<string, LT.NET_project_cuoiki.Models.CartItem>
 @{
     ViewBag.Title = "Cart";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
@@ -51,7 +51,7 @@
                 <!-- product -->
                 @if (Model.Count > 0)
                 {
-                    foreach (KeyValuePair<string, LT.NET_project_cuoiki.Models.ProductInCart> entry in Model)
+                    foreach (KeyValuePair<string, LT.NET_project_cuoiki.Models.CartItem> entry in Model)
                     {
                         string discount = entry.Value.Product.Discount.ToString();
                         string discountForm = discount.Substring(0, discount.Length - 6) + "." + discount.Substring(discount.Length - 6, 3) + "." + discount.Substring(discount.Length - 3) + " đ";
@@ -86,7 +86,9 @@
                             </th>
                             <th class="product-remove">
                                 <button>
-                                    <i class="fa-solid fa-trash"></i>
+                                    <a href="/Shop/DeleteItem?productId=@entry.Key">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </a>
                                 </button>
                             </th>
                         </tr>
@@ -101,7 +103,7 @@
             <ul>
                 @if (Model.Count > 0)
                 {
-                    foreach (KeyValuePair<string, LT.NET_project_cuoiki.Models.ProductInCart> entry in Model)
+                    foreach (KeyValuePair<string, LT.NET_project_cuoiki.Models.CartItem> entry in Model)
                     {
                         string discount = entry.Value.Product.Discount.ToString();
                         string discountForm = discount.Substring(0, discount.Length - 6) + "." + discount.Substring(discount.Length - 6, 3) + "." + discount.Substring(discount.Length - 3) + " đ";
@@ -122,7 +124,11 @@
                                 </div>
                             </div>
                             <div class="deleteProduct">
-                                <button class="deleteProductBtn"><i class="fa-solid fa-trash"></i></button>
+                                <button class="deleteProductBtn">
+                                    <a href="/Shop/DeleteItem?productId=@entry.Key">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </a>
+                                </button>
                             </div>
                         </li>
                     }
@@ -149,7 +155,7 @@
     }
     @if (Model.Count > 0)
     {
-        foreach (KeyValuePair<string, LT.NET_project_cuoiki.Models.ProductInCart> entry in Model)
+        foreach (KeyValuePair<string, LT.NET_project_cuoiki.Models.CartItem> entry in Model)
         {
             totalInt += (entry.Value.Product.Discount * entry.Value.Quantity);
             String totalS = totalInt.ToString();
@@ -164,7 +170,7 @@
 
                 <li>
                     <span class="title">Tạm tính</span>
-                    <span class="price">@totalString</span>
+                    <span class="price">@(totalString == ""? "0 đ":totalString)</span>
                 </li>
                 <li>
                     <span class="title">Giảm giá</span>
@@ -172,7 +178,7 @@
                 </li>
                 <li>
                     <span class="title">Tổng</span>
-                    <span class="price">@totalString</span>
+                    <span class="price">@(totalString == ""? "0 đ":totalString)</span>
                 </li>
             </ul>
             <button class="totals_btns">
