--- a/LT.NET_project_cuoiki/Views/Shop/Product.cshtml
+++ b/LT.NET_project_cuoiki/Views/Shop/Product.cshtml
@@ -2,15 +2,8 @@
 
 @{
     ViewBag.Title = "productControl";
-    Layout = "~/Views/Shared/_MainLayout.cshtml"; IDictionary<int, LT.NET_project_cuoiki.Models.ProductInCart> cartList = Session["cartItem"] as Dictionary<int, LT.NET_project_cuoiki.Models.ProductInCart>;
-    if (cartList == null)
-    {
-        cartList = new Dictionary<int, LT.NET_project_cuoiki.Models.ProductInCart>();
-    }
-    String url = HttpContext.Current.Request.Url.AbsoluteUri;
-
-    Session["inputId"] = HttpUtility.ParseQueryString(new Uri(url).Query).Get("inputId");
-
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
+    
 }
 <link rel="stylesheet" href="~/Asset/css/main.css">
 <link rel="stylesheet" href="~/Asset/css/product.css">
