--- a/LT.NET_project_cuoiki/Views/Shop/Product.cshtml
+++ b/LT.NET_project_cuoiki/Views/Shop/Product.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<LT.NET_project_cuoiki.Entity.ProductEntity>
+﻿@using LT.NET_project_cuoiki.Models
+@model IEnumerable<LT.NET_project_cuoiki.Models.ProductEntity>
 
 @{
     ViewBag.Title = "productControl";
